# PHZ_NNPZ

./: .editorconfig  .gitignore  .jenkinsFile  .travis.yml  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  setup.py
nnpz/: CMakeLists.txt  __init__.py  exceptions.py
nnpz/Nnpz/: BruteForce.h  Distances.h  MaxHeap.h  Priors.h  Scaling.h  Types.h  Weights.h
nnpz/auxdir/cuda/: bruteforce.cu
nnpz/conf/: nnpz.conf
nnpz/config/: ConfigManager.py  CopyInputColumnsConfig.py  FlagsConfig.py  GalacticUnreddenerConfig.py  NeighborListOutputConfig.py  NeighborSelectorConfig.py  OutputHandlerConfig.py  PdzOutputConfig.py  ReferenceCatalogConfig.py  ReferenceSamplePhotometryConfig.py  TargetCatalogConfig.py  WeightCalculatorConfig.py  WeightPhotometryProviderConfig.py  __init__.py
nnpz/config/nnpz/: GalacticUnreddenerConfig.py  MeanPhotOutputConfig.py  NeighborListOutputConfig.py  PdzOutputConfig.py  ReferenceConfig.py  ReferenceSampleConfig.py  ReferenceSamplePhotometryConfig.py  WeightCalculatorConfig.py  WeightPhotometryProviderConfig.py  __init__.py
nnpz/doc/: reference_sample_format.md
nnpz/flags/: NnpzFlag.py  __init__.py
nnpz/framework/: AffectedSourcesFinder.py  ReferenceSampleWeightCalculator.py  ReferenceSampleWeightCorrector.py  __init__.py
nnpz/io/: CatalogReader.py  OutputHandler.py  __init__.py
nnpz/io/catalog_properties/: EBV.py  FiltersMeanWavelength.py  FiltersTransmission.py  Photometry.py  __init__.py
nnpz/io/output_column_providers/: CatalogCopy.py  CoaddedPdz.py  Flags.py  FullCatalogCopy.py  MeanPhotometry.py  MeanTrueRedshift.py  MedianRedshiftFromQuantile.py  MedianTrueRedshift.py  NeighborList.py  PdfHalfQuantile.py  PdfSampling.py  TrueRedshiftPdz.py  __init__.py
nnpz/io/output_hdul_providers/: PdzBins.py  __init__.py
nnpz/neighbor_selection/: BruteForceSelector.py  EuclideanRegionBruteForceSelector.py  KDTreeSelector.py  NeighborSelectorInterface.py  __init__.py
nnpz/neighbor_selection/brute_force_methods/: SmallestSelector.py  __init__.py
nnpz/photometry/: DefaultSedPreprocessing.py  DirectoryFilterProvider.py  FnuPrePostProcessor.py  FnuuJyPrePostProcessor.py  GalacticReddeningPrePostProcessor.py  PhotometryCalculator.py  PhotometryPrePostProcessorInterface.py  PhotometryTypeMap.py  PhotonSedPreprocessing.py  ReferenceSamplePhotometryBuilder.py  SedPreprocessingInterface.py  SourceIndependantGalacticUnReddening.py  __init__.py
nnpz/python/nnpz/: __init__.py  exceptions.py
nnpz/python/nnpz/config/: ConfigManager.py  __init__.py
nnpz/python/nnpz/flags/: NnpzFlag.py  __init__.py
nnpz/python/nnpz/framework/: AffectedSourcesFinder.py  AffectedSourcesReconstructor.py  NeighborSet.py  ProgressListener.py  ReferenceSampleWeightCalculator.py  ReferenceSampleWeightCorrector.py  __init__.py
nnpz/python/nnpz/io/: CatalogReader.py  OutputHandler.py  __init__.py
nnpz/python/nnpz/neighbor_selection/: AdaptiveSelector.py  BruteForceSelector.py  EuclideanRegionBruteForceSelector.py  KDTreeSelector.py  NeighborSelectorInterface.py  __init__.py  bruteforce.py  combined.py  gpu_bruteforce.py  kdtree.py  scaledbruteforce.py
nnpz/python/nnpz/photometry/: DirectoryFilterProvider.py  FilterProviderInterface.py  FlambdaPrePostProcessor.py  FnuPrePostProcessor.py  FnuuJyPrePostProcessor.py  GalacticReddeningPrePostProcessor.py  ListFileFilterProvider.py  MagAbPrePostProcessor.py  PhotometryCalculator.py  PhotometryPrePostProcessorInterface.py  PhotometryProvider.py  PhotometryTypeMap.py  PhotometryWithCorrectionsCalculator.py  PhotonPrePostProcessor.py  ReferenceSampleParallelPhotometryBuilder.py  ReferenceSamplePhotometryBuilder.py  SourceIndependantGalacticUnReddening.py  __init__.py  colorspace.py  photometric_system.py  photometry.py  (+1 more)
nnpz/reference_sample/: IndexProvider.py  PdzDataProvider.py  PhotometryProvider.py  ReferenceSample.py  SedDataProvider.py  __init__.py
nnpz/src/: _Nnpz.cpp
nnpz/src/lib/: BruteForce.cpp  Nnpz.cpp  Priors.cpp  Scaling.cpp  Types.h  Weights.cpp  Weights.h
nnpz/tests/python/: RunPyTest_test.py
nnpz/utils/: Auxiliary.py  Fits.py  Logging.py
nnpz/weights/: CopiedPhotometry.py  InverseEucledianWeight.py  LikelihoodWeight.py  RecomputedPhotometry.py  ReferenceSamplePhotometry.py  WeightCalculatorInterface.py  WeightPhotometryProvider.py  __init__.py
(+381 files in other folders)
